# 3DProject

./: CMakeLists.txt  README.md  glad.c  imgui.ini  main.cpp
assets/shaders/: compute.glsl  fragment.glsl  vertex.glsl
glad/: glad.h
imgui/: imgui.h
